# pool

./: .dockerignore  =1.29.0  LETTA_INTEGRATION_SUMMARY.md  MULTI_AGENT_SYSTEM_README.md  README.md  alembic.ini  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml  test_letta_fix.py
alembic/: env.py
app/: __init__.py  main.py  test_letta_integration.py
app/agents/: letta.py  vertex_ai_tools.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  letta.py  rag.py  users.py
app/core/: config.py  logging_config.py
app/db/: __init__.py  base.py
app/models/: user.py
app/schemas/: __init__.py  letta.py  rag.py  user.py
app/services/: rag_service.py
data/Customers Reviews/: Customers_reviews1.xlsx
data/Product catalog/: ~$Product catalog_Product_catalog_metadata.xlsx
data/Synthetic Site Review/: Noli_Site_Customer_Reviews.csv
data/User profile synthethic data/: Hackathon_user_profile_synthethic_data.xlsx
frontend/: LIZ-README.md  README-injector.md  README.md  build-injector.js  example.html  index.html  liz-demo.css  liz-demo.html  package-lock.json  package.json  proxy-server.js  script.js  vite.config.ts  vite.widget.config.ts  watch-widget.js
frontend/src/: App.tsx  Liz.ts  index.css  widget.tsx
frontend/src/components/: BackendMessage.tsx  SearchTrigger.tsx  SmartSearchOverlay.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/webcomponent/: Liz.ts
tests/: test_letta.py  test_main.py  test_multi_agent_system.py
